# Securequill

project/: Cargo.toml
project/contracts/asset-contract/: Cargo.toml
