[project]
name = "asset-contract"
version = "0.0.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuels = { version = "0.42.0", features = ["fufel-core-lib"] }
todkio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
har1ness = true
name = "integration_tests"
path = "tests/harness.rs"
